v2o.8.5

+ Added Distiller and Infiltrator sound effects

+ Added Distiller recipe for heavy water
* Fixed Distiller Reboiling Unit power use

* Tweaked multiblock machine GUIs to be more informative when not running at full speed

* Fixed molten salt fission fuels registered via CT having incorrect criticality factors

v2o.8.4

+ Added Multiblock Infiltrator - finally craft SiC-SiC CMC!
+ Some recipes will benefit from heating the Pressure Chambers more than others!

+ Added CraftTweaker and GroovyScript support for new recipe types

* Fixed machine process ports incorrectly accepting items when multiblock is incomplete
* Fixed machine power ports not having correct transfer rates

* A few other minor changes

v2o.8.3

* Fixed crash on servers with CraftTweaker installed

* Improved various multiblock machine block textures
* Electrolyser electrode terminals can no longer be placed facing horizontally

v2o.8.2

+ Added Multiblock Distiller - finally exploit the Girdler sulphide process!
+ Optimise your distillation towers with Reflux Units, Reboiling Units and Liquid Distributors!

+ Added CraftTweaker and GroovyScript support for new recipe types

* Modified Multiblock Electrolyser and Distiller default process time and power configs

* Values with units in GUIs no longer truncate decimal places

* Fixed incorrect Emerald Heater Port texture

- Removed unused Sieve Tray Assembly blocks

v2o.8.1

* Fixed crash with radiation enabled and QMD installed

+ Added recipe rate info to Multiblock Electrolyser GUI
* Fixed Multiblock Electrolyser reservoir accepting invalid electrolyte fluids

* Fixed process port multitool shift-click behaviour
* Improved multiblock machine OC support
* Improved multiblock machine assembly messages

v2o.8.0

+ Added Multiblock Electrolyser - design custom layouts of cathodes, anodes and diaphragms!

+ Added multiple new ingot blocks for constructing electrodes
+ Added multiple new materials for crafting diaphragms
