@@ -4,7 +4,7 @@ public class Global {
 	
 	public static final String MOD_ID = "nuclearcraft";
 	public static final String MOD_NAME = "NuclearCraft: Overhauled";
-	public static final String VERSION = "2o.8.5";
+	public static final String VERSION = "2o.8.6";
 	public static final String DEPENDENCIES = "required-after:forge@[14.23.5.2847,);after:tconstruct;after:conarm;after:openterraingenerator;after:alchemistry;after:harvestcraft;after:groovyscript";
 	
 	public static final String NC_CLIENT_PROXY = "nc.proxy.ClientProxy";
